分页及活动经费收缴

--- a/template/base.css
+++ b/template/base.css
@@ -25,3 +25,78 @@ button{
 	color: #fff;
 	padding:0 10px;
 }
+.pageination_align {
+    text-align: center
+}
+.pageination {
+    color: #48576a;
+    font-size: 12px;
+    display: inline-block;
+    user-select: none;
+}
+.pagination_page {
+    padding: 0 4px;
+    border: 1px solid #d1dbe5;
+    border-right: 0;
+    background: #fff;
+    font-size: 13px;
+    min-width: 28px;
+    height: 28px;
+    line-height: 28px;
+    cursor: pointer;
+    box-sizing: border-box;
+    text-align: center;
+    float: left;
+}
+.pagination_page_right {
+    border-right: 1px solid #d1dbe5;
+}
+.pagination_page:hover {
+    color: #20a0ff;
+}
+.disabled {
+    color: #e4e4e4 !important;
+    background-color: #fff;
+    cursor: not-allowed;
+}
+.pagination_page_active {
+    border-color: #20a0ff;
+    background-color: #20a0ff;
+    color: #fff !important;;
+    cursor: default;
+}
+/* 分页 */
+.page-wrap {
+    overflow: hidden;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px;   
+  width: 550px;
+    margin: 0 auto;
+}
+.page-wrap div {
+    float: left;
+    color: #1e5a6b;
+    padding: 1px 10px;
+    margin: 0 5px;
+    border-radius: 50%;
+    user-select: none;
+    border: 1px solid transparent;
+}
+.page-wrap .pointer {
+    cursor: pointer;
+}
+.page-wrap .hover:hover {
+    border-color: #7ba6b3;
+}
+.page-wrap .li-page {
+    line-height: 1.5;
+    cursor: pointer;
+    color: #1e5a6b;
+}
+.page-wrap .li-page:hover {
+    color: #7ba6b3;
+}
+.page-wrap .active {
+    border-color: #246c81;
+}
